Remove manual definition